# rav1e-feedstock

./: README.md  conda-forge.yml
.ci_support/: linux_64_.yaml  linux_aarch64_.yaml  linux_ppc64le_.yaml  osx_64_.yaml  osx_arm64_.yaml  win_64_.yaml
recipe/: CMakeLists.txt  bld.bat  build.sh  meta.yaml  no_git_version.patch
